src/sass/_blog.scss
//===============================================================================
// BLOG
//===============================================================================
.blog-header {
  background-color: $pc-aqua; 
  padding: $header-height-small 0 10px;
  position: relative;

  h2,
  h3 {
    color: white;
  }

  h2 {
    font-size: 42px;
    margin: 30px 0 10px;
  }

  h3 {
    font-weight: 300;
    line-height: 1.2;
  }
}

.blog-header-inner {
  max-width: 950px;
  margin: 0 auto;
  padding: 0 20px;
}

.post {
  padding: 20px;
  font-size: 16px;
  max-width: 950px;
  margin: 0 auto;
  position: relative;
  
  h1, h2, h3, h4, h5, h6 {
    color: $pc-pink;
  }

  .post-title {
    font-size: 26px;

    a {
      text-decoration: none;
    }
  }

  ul {
    list-style: disc;
    padding-left: 1em;
  }

  .tags {
  list-style: none;
  padding: 0;

    li{
      display: inline;
    }
  }
}

.post-content,
.post-meta,
.thoughts,
.pagination-inner {
  width: 100%;
  max-width: 650px;
  margin: 0 auto;
}

.author  {
  display: inline;
  margin-right: 15px;
  font-size: 22px;
}

.thoughts {
  span {
    font-weight: 700;
  }

  a {
    text-decoration: none;
    position: relative;

    &:after {
      content: "";
      background-color: $pc-pink;
      position: absolute; 
      background-image: url('../img/tweet.png');
      background-size: cover;
      width: 20px;
      height: 20px;
      right: -25px;
      top: 1px;
    }

    &:hover:after{
      background-color: darken($pc-pink, 15); 
    }
  }
}

.pagination {
  padding: 0 20px;
  max-width: 950px;
  margin: 40px auto 60px;

  a {
    text-decoration: none;
    font-weight: 300;
    font-style: italic;
  }

  a:first-child:before {
    content: "◀ ";
    color: $ink;
  }

  a:nth-child(2) {
    float: right;

    &:after {
      content: " ▶";
      color: $ink;
    }
  }
}

.pagination-inner {
  margin: 0;
}

